# lexemator-2000-api

./: .dockerignore  .gitignore  logging.conf  pyproject.toml
app/: main.py
app/api/v1/: cards.py
app/core/: config.py  database.py
app/schemas/: cards.py
archive/old_v/app/: main.py
archive/old_v/app/api/v1/: cards.py
archive/old_v/app/core/: config.py  database.py
archive/old_v/app/models/: cards.py
